--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  english_words: ^4.0.0
+  firebase_core: "^1.10.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  english_words: ^4.0.0
+
 
 dev_dependencies:
   flutter_test:
