--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: "^1.10.0"
   cloud_firestore: ^3.1.0
   firebase_auth: ^3.2.0
+  path_provider: ^2.0.8
 
 
 dev_dependencies:
@@ -69,7 +70,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - data/restaurants.json
-    - data/users.json
+    - data/user.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
