--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: "^1.10.0"
   cloud_firestore: ^3.1.0
   firebase_auth: ^3.2.0
+  path_provider: ^2.0.8
 
 
 dev_dependencies:
