--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^3.1.0
   firebase_auth: ^3.2.0
   path_provider: ^2.0.8
+  flutter_native_splash: ^2.0.1+1
 
 
 dev_dependencies:
