--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_auth: ^3.2.0
   path_provider: ^2.0.8
   flutter_native_splash: ^2.0.1+1
+  sqflite: ^2.0.2
+  hive: ^2.0.6
+  hive_flutter: ^1.1.0
 
 
 dev_dependencies:
