--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^3.2.0
   path_provider: ^2.0.8
   flutter_native_splash: ^2.0.1+1
+  flutter_svg: ^1.0.3
 
 
 dev_dependencies:
@@ -72,6 +73,12 @@ flutter:
   assets:
     - data/restaurants.json
     - data/users.json
+    - assets/images/Adduserbutton.png
+    - assets/images/checkbox.svg
+    - assets/images/rectangle2.svg
+    - assets/images/Usericon.png
+    - assets/images/search.png
+    - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
