added preliminary search screen and restaurant menu screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,8 @@ flutter:
     - assets/images/Usericon.png
     - assets/images/search.png
     - assets/images/logo.png
-
+    - assets/images/mcdonalds/
+    - assets/images/panera/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
