improved buttons, fixed padding and clear add user dialogue after save

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ flutter:
     - assets/images/rectangle2.svg
     - assets/images/Usericon.png
     - assets/images/search.png
+    - assets/images/loupe.png
+    - assets/images/add-user.png
     - assets/images/logo.png
     - assets/images/mcdonalds/
     - assets/images/panera/
