--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,16 +77,21 @@ flutter:
   assets:
     - data/restaurants.json
     - data/users.json
-    - assets/images/Adduserbutton.png
-    - assets/images/checkbox.svg
-    - assets/images/rectangle2.svg
-    - assets/images/Usericon.png
-    - assets/images/search.png
-    - assets/images/loupe.png
-    - assets/images/add-user.png
-    - assets/images/logo.png
-    - assets/images/mcdonalds/
-    - assets/images/panera/
+    - assets/
+    # - assets/images/Adduserbutton.png
+    # - assets/images/checkbox.svg
+    # - assets/images/rectangle2.svg
+    # - assets/images/Usericon.png
+    # - assets/images/search.png
+    # - assets/images/loupe.png
+    # - assets/images/add-user.png
+    # - assets/images/logo.png
+    # - assets/images/mcdonalds/
+    # - assets/images/mcdonalds/breakfast
+    # - assets/images/mcdonalds/burgers
+    # - assets/images/mcdonalds/chicken
+    # - assets/images/mcdonalds/combo
+    # - assets/images/panera/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
